# LLM-Injection-Guard

./: .gitignore  README.md  pyproject.toml
InjectionDetector/: __init__.py  canary_detector.py  heuristic_detector.py  regex_detector.py  test_heuristic.py
example/: gemini_api.py  main.py
example/static/css/: style.css
example/static/js/: script.js
example/templates/: index.html
